--- a/stylesheet/styles.css
+++ b/stylesheet/styles.css
@@ -1,27 +1,40 @@
 /*
-Error: File to import not found or unreadable: main.
-       Load path: C:/Users/A01012025/Documents/GitHub/business-brochure/scss
-        on line 18 of scss/styles.scss
+Error: Invalid CSS after "$body-font: ": expected expression (e.g. 1px, bold), was ";"
+        on line 14 of scss/_variables.scss
+        from line 7 of scss/styles.scss
 
-13: 
-14: // Site Sections
-15: @import 'body';
-16: @import 'header';
-17: @import 'nav';
-18: @import 'main';
-19: @import 'sections';
-20: @import 'footer';
-21: 
-22: // Specialty Items
-23: // @import 'gallery';
+9: // Use Color functions to brighten and darken colors
+10: $brand-color-dark: darken($brand-color, 20);
+11: $brand-color-light: lighten($brand-color, 20);
+12: 
+13: // Fonts
+14: $body-font: ;
+15: $heading-font: ;
+16: // Typographic Defualts
+17: $line-height: 1.4;
+18: 
+19: // Layout variables
 
 Backtrace:
-scss/styles.scss:18
-C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/tree/import_node.rb:67:in `rescue in import'
-C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/tree/import_node.rb:44:in `import'
-C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/tree/import_node.rb:28:in `imported_file'
-C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/tree/import_node.rb:37:in `css_import?'
-C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:314:in `visit_import'
+scss/_variables.scss:14
+scss/styles.scss:7
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:1278:in `expected'
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/script/lexer.rb:231:in `expected!'
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/script/parser.rb:724:in `assert_expr'
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/script/parser.rb:68:in `parse'
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:1134:in `sass_script'
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:642:in `variable'
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:696:in `block_child'
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:689:in `block_contents'
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:137:in `stylesheet'
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:41:in `parse'
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/engine.rb:414:in `_to_tree'
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/engine.rb:321:in `to_tree'
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:327:in `block in visit_import'
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/stack.rb:88:in `block in with_import'
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/stack.rb:135:in `with_frame'
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/stack.rb:88:in `with_import'
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:326:in `visit_import'
 C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:36:in `visit'
 C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
 C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.5.6/lib/sass/stack.rb:79:in `block in with_base'
@@ -61,4 +74,4 @@ C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-listen-4.0.0/lib/sass-listen/interna
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: File to import not found or unreadable: main.\A        Load path: C:/Users/A01012025/Documents/GitHub/business-brochure/scss\A         on line 18 of scss/styles.scss\A \A 13: \A 14: // Site Sections\A 15: @import 'body';\A 16: @import 'header';\A 17: @import 'nav';\A 18: @import 'main';\A 19: @import 'sections';\A 20: @import 'footer';\A 21: \A 22: // Specialty Items\A 23: // @import 'gallery';"; }
+  content: "Error: Invalid CSS after \"$body-font: \": expected expression (e.g. 1px, bold), was \";\"\A         on line 14 of scss/_variables.scss\A         from line 7 of scss/styles.scss\A \A 9: // Use Color functions to brighten and darken colors\A 10: $brand-color-dark: darken($brand-color, 20);\A 11: $brand-color-light: lighten($brand-color, 20);\A 12: \A 13: // Fonts\A 14: $body-font: ;\A 15: $heading-font: ;\A 16: // Typographic Defualts\A 17: $line-height: 1.4;\A 18: \A 19: // Layout variables"; }
