--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,34 +7,21 @@ $text-color-dark: black;
 $text-color-light: white;
 
 // Use Color functions to brighten and darken colors
-$brand-color-dark: darken($brand-color, 20);
-$brand-color-light: lighten($brand-color, 20);
+// $brand-color-dark: darken($brand-color, 20);
+// $brand-color-light: lighten($brand-color, 20);
 
 // Fonts
 $body-font: ;
 $heading-font: ;
 // Typographic Defualts
-$line-height: 1.4;
+$line-height: ;
 
 // Layout variables
-$padding: 30px;
+$padding: ;
 // Grid Values
-$gutter: 2;
+$gutter: ;
 
-// Function to determine column width
-// takes two numerical parameters:
-// $c -> the number of columns in a row
-// $g -> the gutter amount
-@function colWidth($c, $g: 2){
-    @return ((100 - $g * ($c - 1)) / $c) * 1%;
-}
 
-$one-col: 100%;
-$two-col: colWidth(2);
-$three-col: colWidth(3);
-$four-col: colWidth(4);
-$five-col: colWidth(5);
-$six-col: colWidth(6);
 
 // Function to
 // Convert Px to Ems
