Add variable styles

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -11,15 +11,15 @@ $text-color-light: white;
 // $brand-color-light: lighten($brand-color, 20);
 
 // Fonts
-$body-font: ;
-$heading-font: ;
-// Typographic Defualts
-$line-height: ;
+// $body-font: ;
+// $heading-font: ;
+// // Typographic Defualts
+// $line-height: ;
 
-// Layout variables
-$padding: ;
-// Grid Values
-$gutter: ;
+// // Layout variables
+// $padding: ;
+// // Grid Values
+// $gutter: ;
 
 
 
