--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,18 +1,22 @@
 /* Header Images */
 .image-header{
-    background-color: #DC8282;
+    background-image: url('../images/header-image1.png');
     height: 725px;
     /* border-radius:  0 0 450px  50px; */
 }
-.img-01{
-    opacity: 0.3;
-    margin-left: 375px;
-    position: relative;
-}
-.img-02{
-    position: absolute;
-    top: 2%;
-    left: 47%;
-}
-/* end of header stuff */
+// .img-01{
+//     opacity: 0.3;
+//     margin-left: 375px;
+//     position: relative;
+// }
+// .img-02{
+//     position: absolute;
+//     top: 2%;
+//     left: 47%;
+// }
 
+// THIS IS THE PINK THAT PUSHES THE CURVE DOWN
+.filler-header-pink{
+    background-color: #DC8282;
+    height: 475px;
+}
