--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -2,10 +2,12 @@
 
 //Services
 /* Section one header */
-.section-01-head-box{
-    background-color: #c7b299;
-    line-height: 100px;
-}
+// .sec1bk{
+//     background-color: #c7b299;
+//     line-height: 100px;
+//     border-radius: 11em 0;
+//     transform: skew(0, 30deg);
+// }
 //Products
 //About
 //Gallery
