--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,10 +1,5 @@
 /* Header Images */
-.image-header{
-    background-image: url('../images/Asset 4.svg');
-    background-repeat: no-repeat;
-    height: 725px;
-    /* border-radius:  0 0 450px  50px; */
-}
+
 .img-01{
     opacity: 0.3;
     margin-left: 420px;
@@ -21,11 +16,12 @@
     position: absolute;
     top: 61%;
     left: 10%;
-    
+    width: 100vh;
 }
 
-// THIS IS THE PINK THAT PUSHES THE CURVE DOWN
+
 .filler-header-pink{
     background-color: #DC8282;
-    height: 284px;
+    width: 100%;
+    height: 900px;
 }
