--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,21 +2,26 @@
 
 .img-01{
     opacity: 0.3;
-    margin-left: 420px;
+    margin-left: 221px;
     position: relative;
-    top: -476px;
+    top: -70px;
 }
 .img-02{
     position: absolute;
     top: 2%;
-    left: 47%;
+    left: 28%;
 }
 
 .swoop{
     position: absolute;
-    top: 61%;
-    left: 10%;
-    width: 100vh;
+    top: 90%;
+    left: 3%; 
+}
+.whitespace{
+    position: absolute;
+    top: 91%;
+    left: 0.5%;
+    width: 100%;
 }
 
 
