--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -2,12 +2,11 @@
 
 //Services
 /* Section one header */
-// .sec1bk{
-//     background-color: #c7b299;
-//     line-height: 100px;
-//     border-radius: 11em 0;
-//     transform: skew(0, 30deg);
-// }
+.section-01-head{
+    position: absolute;
+    text-align: right;
+    
+}
 //Products
 //About
 //Gallery
