--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -46,6 +46,10 @@
 //Products
 //About
 //Gallery
+.review-area{
+    display: flex;
+    margin: 0;
+}
 .gallery-area{
     background-color: pink;
 }
