--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -48,11 +48,30 @@
 //Gallery
 .review-area{
     display: flex;
-    margin: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.review{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 30%;
+    margin: auto;
+}
+.review p{
+    text-align: center;
 }
 .gallery-area{
     background-color: pink;
+    line-height: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+.gallery-header{
+    text-align: center;
+}
+
 //Contact
 
 
