--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -73,21 +73,54 @@
 }
 
 //Contact
-.contact{
-    height: 80vh;
-    background-image: url('../images/images-placeholder-contact.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+
 .message{
     text-align: center;
     font-size: 1.5rem;
 }
+
 form{
     display: flex;
     flex-direction: column;
-    background-color: $brand-color;
+    align-items: center;
     width: 50%;
     margin: auto;
+    background-color: $brand-color;
+    border-radius: 25px;
+    padding: 25px;
 }
+label{
+    font-size: 1.2rem;
+}
+.info{
+    display: flex;
+}
+select{
+    width: 100%;
+}
+#textarea{
+    width: 100%;
+    height: 100px;
+}
+
+//Button Styles
+.submit-btn {
+    margin: 20px;
+    padding: 10px;
+    color: rgb(220, 130, 130); 
+    font-size: 25px; 
+    line-height: 20px; 
+    border-radius: 20px; 
+    font-family: Georgia, serif; 
+    font-weight: normal; 
+    text-decoration: none; 
+    font-style: normal; 
+    font-variant: normal; 
+    text-transform: none;  
+    display: inline-block;}
+    
+.submit-btn:hover {
+    background: white; 
+}
+
 
