--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -63,13 +63,34 @@
 }
 .gallery-area{
     background-color:$brand-color;
-    line-height: 50px;
+    height: 40%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 .gallery-header{
     text-align: center;
+}
+.img-gal{
+    margin: 20px;
+}
+
+//Picture arrows
+i {
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+}
+
+.right {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+}
+
+.left {
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
 }
 
 //Contact
