--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,17 @@
 // Colors
 $brand-color: #dc8282;
 $body-banner-color: #c7b299;
+$product-background:#dc8282;
+
+//Section Images
+$padding-right:50px;
+$margin:0;
+$padding-left:0;
+
+
+
+
+
 // $wrapper-bg-color: white;
 // Text Colors
 $text-color-dark: black;
