--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,5 @@
+//Margin Center
+$margin-center:0 auto;
 // Colors
 $brand-color: #dc8282;
 $body-banner-color: #c7b299;
@@ -8,8 +10,11 @@ $padding-right:50px;
 $margin:0;
 $padding-left:0;
 
+//Padding
+$padding-default: 20px;
 
-
+//Circles
+$border-radius:50%;
 
 
 // $wrapper-bg-color: white;
