--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -1,7 +1,6 @@
 //Section main styles
 .section{
-    height: 100vh;
-    border-bottom: 1px black solid;
+    min-height: 100vh;
 }
 //Services
     //center/flex services section content
@@ -154,35 +153,50 @@ i {
 
 //Contact
 .contact{
-    height: 80vh;
+    margin: 10px;
+    position: relative;
+}
+.contact-content{
+    display: flex;
+    width: 100%;
 }
 .message{
     text-align: center;
-    font-size: 1.5rem;
 }
 
 form{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 30%;
-    margin: auto;
     background-color: $brand-color;
     border-radius: 25px;
     padding: 25px;
+    
 }
-label{
-    font-size: 1.2rem;
-}
+
 .info{
     display: flex;
 }
 select{
     width: 100%;
 }
+.chk-box{
+    margin: 10px;
+}
 #textarea{
     width: 100%;
     height: 100px;
+}
+address{
+    font-size: 1.3rem;
+    margin: 15px;
+    text-align: center;
+    border: 1px solid $brand-color;
+    height: 180px;
+    padding: 15px;
+    position: absolute;
+    top: 30%;
+    left: 45%;
 }
 
 //Button Styles
