header and sections

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -29,4 +29,6 @@
     background-color: #DC8282;
     width: 100%;
     height: 900px;
+    -webkit-border-radius: 177px 0px 160px 0px;
+    border-radius: 450px 0px 502px 0px;
 }
