--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -2,6 +2,13 @@
 .section{
     min-height: 100vh;
 }
+.sectionhead{
+    height: 80px;
+    background-color: $body-banner-color;
+    -webkit-border-radius: 177px 0px 160px 0px;
+    border-radius: 177px 0px 160px 0px;
+    
+}
 //Services
     //center/flex services section content
     .services{
@@ -131,6 +138,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    -webkit-border-radius: 177px 0px 160px 0px;
+    border-radius: 177px 0px 160px 0px;
+    
 }
 .gallery-header{
     width: 50%;
@@ -201,7 +211,7 @@ form input[type="text"], form input[type="radio"]{
     font-size: 1rem;
 }
 #select-box{
-    height: 50px;
+    height: 120px;
     font-size: 1rem;
 }
 select{
@@ -240,7 +250,9 @@ address{
     font-style: normal; 
     font-variant: normal; 
     text-transform: none;  
-    display: inline-block;}
+    display: inline-block;
+    height: 150px;
+}
     
 .submit-btn:hover {
     background: white; 
