--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,6 +3,7 @@ $margin-center:0 auto;
 // Colors
 $brand-color: #dc8282;
 $body-banner-color: #c7b299;
+$border: 5px solid #dc8282;
 
 //Section Images
 $padding-right:50px;
