--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,6 +2,9 @@
 footer{
     display: flex;
     justify-content: space-between;
-    border-top: 3px solid black;
+    border-top: 1px solid black;
 }
 
+.icons {
+    margin-top:5px;
+}
