--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -98,7 +98,7 @@
 .product {
     text-align: left;
     padding-bottom:10px;
-    padding-right:20px;
+    padding-right:$padding-default;
     margin-top:40px;
 
 
@@ -202,6 +202,75 @@ i {
 
 //About
 //DON'T TOUCH
+
+.about-sec {
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.team-bubbles {
+    margin-right:$margin-right;
+    width:450px;
+    
+}
+
+.team-bubbles img {
+    border-radius: 50%;
+    border:$border;
+    width:200px;
+}
+
+.team-bubbles li {
+    font-size:20px;
+    font-weight:19px;
+    list-style: none;
+    margin-top:10px;
+}
+
+.our-story {
+    margin-right: $margin-right;
+
+    padding:10px 20px 10px 30px;
+    width:600px;
+    height:1200px;
+}
+
+.our-story h3 {
+    font-size:$section-heading;
+    text-align: center;
+
+}
+
+.our-story img {
+    width:550px;
+    height:auto;
+    margin:0 auto;
+    padding-top:30px;
+}
+
+.join {
+    width:400px;
+
+}
+
+.join h4 {
+    font-size:$section-heading;
+}
+
+.join button {
+    border: none;
+    outline: none;
+    width:150px;
+    height:50px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 20px;
+    background-color: $brand-color;
+}
+
+
 //Gallery
 
 .review-area{
