added section variables

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,19 +3,19 @@ $margin-center:0 auto;
 // Colors
 $brand-color: #dc8282;
 $body-banner-color: #c7b299;
-$border: 5px solid #dc8282;
-
-//Section Images
-$padding-right:50px;
-$margin:0;
-$padding-left:0;
+$border: 3px solid #dc8282;
 
 //Padding
 $padding-default: 20px;
+$padding-right:50px;
+$padding-left:0;
 
 //Circles
 $border-radius:50%;
 
+//Margins
+$margin-right:30px;
+$margin:0;
 
 // $wrapper-bg-color: white;
 // Text Colors
