added global variable for section font headings

--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,6 +1,9 @@
 $body-font: 'Gotham', sans-serif ;
 $heading-font: 'Times New Roman', serif;
 
+//font-size
+$section-heading:25px;
+
 p {
    font-family: $body-font;
 }
