--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -268,6 +268,10 @@ i {
     font-weight: bold;
     border-radius: 20px;
     background-color: $brand-color;
+
+}
+.join button:hover {
+    color:white;
 }
 
 
@@ -396,18 +400,21 @@ address{
 .submit-btn {
     margin: 20px;
     padding: 10px;
-    color: rgb(220, 130, 130); 
-    font-size: 25px; 
+    color: $brand-color; 
+    font-size: 20px; 
     line-height: 20px; 
     border-radius: 20px; 
     font-family: Georgia, serif; 
     font-weight: normal; 
     text-decoration: none; 
+    outline: none;
+    border:none;
     font-style: normal; 
     font-variant: normal; 
     text-transform: none;  
     display: inline-block;
-    height: 150px;
+    height: 120px;
+    width:110px;
 }
     
 .submit-btn:hover {
