--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -339,7 +339,9 @@ i {
 }
 .message{
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
+    color: white;
+    font-weight: bold;
 }
 
 form{
@@ -352,54 +354,54 @@ form{
     position: absolute;
     top: 9%;
     left: 0%;
-    width: 35%;
-    height: 75%;
 }
 label{
     font-size: 1rem;
 
 }
 .question-radio{
-    margin-top: 10px;
+    font-size: 25px;
 }
 .info{
     display: flex;
-    height: 266px;
     margin: 10px;
 }
-form input[type="text"], form input[type="radio"]{
-    font-size: 1rem;
+.info-boxes{
+    margin-top: 10px;
 }
+.radio{
+    margin: 10px;
+}
+
 #select-box{
-    height: 120px;
     font-size: 1rem;
 }
 select{
     width: 100%;
 }
-.chk-box{
-    margin: 10px;
+.radio-boxes{
+    margin: auto;
+    width: 50%;
 }
 #textarea{
     width: 100%;
-    height: 250px;
+    height: 150px;
+}
+.chk-box{
+    margin: 10px;
 }
 address{
+    margin-bottom: 10px;
     font-size: 1.3rem;
-    margin: 15px;
     text-align: center;
-    border: 1px solid $brand-color;
-    height: 180px;
-    padding: 15px;
-    position: absolute;
-    top: 30%;
-    left: 36%;
+}
+.email{
+    color: black;
+    text-decoration: none;
 }
 
 //Button Styles
 .submit-btn {
-    margin: 20px;
-    padding: 10px;
     color: $brand-color; 
     font-size: 20px; 
     line-height: 20px; 
@@ -413,8 +415,6 @@ address{
     font-variant: normal; 
     text-transform: none;  
     display: inline-block;
-    height: 120px;
-    width:110px;
 }
     
 .submit-btn:hover {
@@ -422,8 +422,6 @@ address{
 }
  .flower-girl{
      position: absolute;
-     top: 0%;
-     left: 60%;
-     width: 500px;
-     height: 100vh;
+     top: 13%;
+     left: 41%;
  }
