--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,7 +2,7 @@
 footer{
     display: flex;
     justify-content: space-between;
-    border-top: 1px solid black;
+    border-top: thick solid black;
 }
 
 .icons {
