--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -382,7 +382,7 @@ select{
 }
 #textarea{
     width: 100%;
-    height: 150px;
+    height: 80px;
 }
 .chk-box{
     margin: 10px;
@@ -406,6 +406,7 @@ fieldset{
 //Button Styles
 .submit-btn {
     color: $brand-color; 
+    margin: 20px;
     font-size: 20px; 
     line-height: 20px; 
     border-radius: 20px; 
