changes to nav and services section

--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -64,10 +64,10 @@
     }
     .prices{
         display: none;
-        top: 50%;
-        left: 50%;
-        width: 250px;
-        height: 250px;
+            top: 50%;
+            left: 50%;
+           margin:0 auto;
+           padding: 100px;
         // position: absolute;
         // top: 25%;
         // left: 40%;
