--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,15 +1,12 @@
 // Nav styles 
 
 .logo {
+    margin:0 auto;
     display: block;
-    margin-left:15px;
-    margin-right:auto;
-}
-
-.logo img {
-    display: block;
+    padding-top:30px 0px, 30px, 0px;
 
 }
+/*
 
 .hamburger-menu {
     display:none;
@@ -94,34 +91,39 @@
     background: #111111; 
 
 }
-nav{
+*/
+
+nav {
     position: fixed;
     margin: 0;
-    height: 45px;
+    height: 30px;
     width: 100%;
     z-index: 1;
 }
-nav ul{
+
+nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
     display: flex;
 }
-nav li{
+
+nav li {
     flex: 1;
+
     
 }
-nav a{
-    line-height: 45px;
+nav a {
+    line-height: 40px;
     text-decoration: none;
     background-color: white;
     display: block;
     text-align: center;
+    color:black;
+    margin:-10px;
+
+
 }
-
-
-
-
 
 
 
