--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -83,6 +83,7 @@
     .menu-pic:hover .prices{
         display: block;
     }
+
 //Products
 //DON'T TOUCH
 
@@ -296,7 +297,7 @@ i {
 }
 .gallery-area{
     background-color:$brand-color;
-    height: 40%;
+    height: 375px;
     display: flex;
     flex-direction: column;
     align-items: center;
