--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -32,3 +32,8 @@
     -webkit-border-radius: 177px 0px 160px 0px;
     border-radius: 450px 0px 502px 0px;
 }
+.flowerdecor{
+    position: absolute;
+    top: 0%;
+    left: 0%;
+}
