--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,5 +1,5 @@
-$body-font: 'Gotham', sans-serif ;
-$heading-font: 'Times New Roman', serif;
+$body-font: 'Montserrat', sans-serif; ;
+$heading-font: 'Varela Round', sans-serif;
 
 //font-size
 $section-heading:25px;
@@ -7,3 +7,4 @@ $section-heading:25px;
 p {
    font-family: $body-font;
 }
+
