--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -412,11 +412,12 @@ select{
     margin: auto;
     width: 70%;
 }
-#textarea{
+textarea{
     width: 100%;
     height: 150px;
     padding:10px;
     font-family: $body-font;
+    padding-bottom: 30px;
 }
 .chk-box{
     margin: 10px;
