--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,6 +3,7 @@ footer{
     display: flex;
     justify-content: space-between;
     border-top: thick solid black;
+    padding: 20px;
 }
 
 .icons {
