--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,22 +1,83 @@
 //Services Page
+@media (max-width:1500px){
+    .img-02 {
+        left: 22%;
+    }
+}
 @media (max-width:1340px){
     .contact-content{
         width:100%;
     }
 
     .flower-girl {
-        display: none;
+        position: absolute;
+        top: 27%;
+        left: 45%;
+        width: 64%;
     }
+    
 }
 @media (max-width:1200px){
+    .flower-girl{
+        display: none;
+    }
+    form{
+        margin: auto;
+        width: 100%;
+    }
     //SERVICES --grid from 4col to 3col
     .menu{
         grid-template-columns: repeat(3, 1fr);
     }
-}
-@media (max-width:1000px){
-    .content-wrapper{
-        width: 100%;
+    .filler-header-pink{
+        border-radius: 0;
+    }
+    .about-sec{
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        margin: auto;
+    }
+    .about-sec {
+        flex-direction: column;
+        align-items: center;
+        width:100%;
+        margin:0 auto;
+    }
+
+    .team-bubbles {
+        width:50%;
+
+    }
+
+    .team-bubbles img {
+       width:50%;
+    }
+
+    .team-bubbles li, .team-bubbles p {
+        text-align:center;
+        padding-bottom:10px;
+
+    }
+
+    .team-bubbles p {
+        padding-bottom:20px;
+    }
+
+    .join {
+        text-align:center;
+    }
+
+    .our-story p {
+        text-align:center;
+        padding:0 50px;
+        margin: 0 auto;
+        white-space: normal;
+        flex-wrap: wrap;
+
+    }
+    body{
+        margin: auto;
     }
     //HEADER IMGS --Scoot over
     .img-01{
@@ -27,29 +88,79 @@
     }
     .img-02{
         position: absolute;
-        top: 2%;
+        top: 0%;
         left: 7%;
     }
 
     //Gallery --flex reviews
     .review-area{
         display: block;
-        width: 320px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        margin-left: 0px;
     }
     .review{
-        width: 130%;
+        margin: auto;
+        width: 100%;
+    }
+    .rev-pic{
+        width: 50%;
+    }
+    .gallery p{
+        width: 70%;
     }
     .gallery-area{
-        height: 1100px;
-        width: 515px;
+        height: 600px;
+        width: 80%;
+        margin: auto;
     }
     .gramclump{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
     }
     .responsive-gallery{
-        display: flex;
-        justify-content: space-between;
+        margin: auto;
+    }
+    .gal-display{
+        display: none;
+    }
+    .img-gal{
+        widows: 50%;
+    }
+}
+@media (max-width:1000px){
+    .img-02{
+        display: none;
+
+    }
+    .filler-header-pink{
+        display: none;
+    }
+    body{
+        margin: auto;
+    }
+    //HEADER IMGS --Scoot over
+    .img-01{
+        margin-left: 221px;
+        position: relative;
+        top: 104px;
+        left: -350px;
+    }
+
+    //Gallery --flex reviews
+    .review-area{
+        display: block;
+    }
+    .review{
+        margin: auto;
+    }
+    .gallery-area {
+        height: 748px;
+    }
+    
+    .responsive-gallery{
+        margin: auto;
     }
     // .gallery-area{
     //     display: block;
@@ -67,10 +178,18 @@
     .menu{
         grid-template-columns: repeat(2, 1fr);
     }
-
+    
 }
 
 @media only screen and (max-width: 960px) { 
+    .img-02{
+        width: 90%;
+        top: 7%;
+        left: 7%;
+    }
+    .img-01{
+        display: none;
+    }
     .fleximage-and-productsection {
         flex-direction: column;
     }
@@ -139,7 +258,12 @@
 
     }
 }
+@media (max-width: 850px){
 
+    .filler-header-pink{
+        height: 738px;
+    }
+}
 @media (max-width:700px){
     .img-01{
         display: none;
@@ -158,4 +282,41 @@
     .menu{
         grid-template-columns: repeat(1, 1fr);
     }
+    .gramclump{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .gallery-area {
+        height: 1190px;
+    }
+}
+@media (max-width: 500px){
+    .img-02 {
+        position: relative;
+        width: 750px;
+        height: 717px;
+    }
+    .menu-hide{
+        display: block;
+    }
+    nav ul{
+        display: none;
+        flex-direction: column;
+    }
+    nav a{
+        line-height: 66px;
+    }
+    nav a:hover:not(.logo){
+        background-color: $brand-color;
+        color: white;
+    }
+    //Button
+    button.menu-hide{
+        width: 100%;
+        background-color: white;
+        border: none;
+        font-size: 1rem;
+        font-weight: bold;
+        color: $brand-color;
+    }
+
 }
