--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,39 +1,24 @@
 /* Header Images */
 
-.img-01{
-    opacity: 0.3;
-    margin-left: 221px;
-    position: relative;
-    top: 104px;
-}
-.img-02{
-    position: absolute;
-    top: 1%;
-    left: 28%;
-}
+// .img-01{
+//     opacity: 0.3;
+//     margin-left: 221px;
+//     position: relative;
+//     top: 104px;
+// }
+// .img-02{
+//     position: absolute;
+//     top: 1%;
+//     left: 28%;
+// }
 
-.swoop{
-    position: absolute;
-    top: 90%;
-    left: 3%; 
-}
-.whitespace{
-    position: absolute;
-    top: 91%;
-    left: 0.5%;
-    width: 100%;
-}
 
 
 .filler-header-pink{
-    background-color: #DC8282;
+    background-color: $brand-color;
     width: 100%;
     height: 900px;
     -webkit-border-radius: 177px 0px 160px 0px;
     border-radius: 450px 0px 502px 0px;
 }
-.flowerdecor{
-    position: absolute;
-    top: 0%;
-    left: 0%;
-}
+
