--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -137,6 +137,15 @@
     .filler-header-pink{
         display: none;
     }
+    .replace{
+        background-image: url('../images/pink-cutout-skai.jpg');
+        background-color: $brand-color;
+        background-position: center;
+        background-repeat: no-repeat;
+        width: 100%;
+       height: 100vh;
+        
+    }
     body{
         margin: auto;
     }
@@ -278,6 +287,7 @@
     }
 }
 @media (max-width:600px){
+
     //SERVICES --grid from 2col to 1col
     .menu{
         grid-template-columns: repeat(1, 1fr);
