--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,16 +1,16 @@
 /* Header Images */
 
-// .img-01{
-//     opacity: 0.3;
-//     margin-left: 221px;
-//     position: relative;
-//     top: 104px;
-// }
-// .img-02{
-//     position: absolute;
-//     top: 1%;
-//     left: 28%;
-// }
+.img-01{
+    opacity: 0.3;
+    margin-left: 221px;
+    position: relative;
+    top: 104px;
+}
+.img-02{
+    position: absolute;
+    top: 1%;
+    left: 28%;
+}
 
 
 
