--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -301,7 +301,6 @@
 }
 @media (max-width: 500px){
     .img-02 {
-        position: relative;
         width: 750px;
         height: 717px;
     }
@@ -328,5 +327,16 @@
         font-weight: bold;
         color: $brand-color;
     }
-
+    .our-story{
+         margin-right: 0; 
+        padding: 0; 
+         width: 100%; 
+        height: 1200px;
+    }
+    .join{
+        margin-right: 0; 
+       padding: 0; 
+        width: 100%; 
+       height: 60vh;
+   }
 }
