--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -124,11 +124,11 @@
     padding-bottom:0;
 
 }
-.product-list p {
-    width:300px;
+// .product-list p {
+//     width:300px;
  
 
-}
+// }
 
 .circle {
     padding-right:30px;
