--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -336,13 +336,14 @@
          margin-right: 0; 
         padding: 0; 
          width: 100%; 
-        height: 1200px;
+        height: 100%;
     }
     .join{
         margin-right: 0; 
        padding: 0; 
         width: 100%; 
-       height: 60vh;
+       height: 100%;
+   
    }
 
    .contact-form .info {
