--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -317,7 +317,7 @@
         flex-direction: column;
     }
     nav a{
-        line-height: 66px;
+        line-height: 50px;
     }
     nav a:hover:not(.logo){
         background-color: $brand-color;
@@ -331,6 +331,12 @@
         font-size: 1rem;
         font-weight: bold;
         color: $brand-color;
+        line-height: 50px;
+    }
+    button.menu-hide:active,
+    button.menu-hide:focus{
+        outline: none;
+        border: none;
     }
     .our-story{
          margin-right: 0; 
