FIxed 450 height of sections

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -361,3 +361,14 @@
        white-space: normal;
    }
 }
+@media (max-width:450px){
+
+    .section{
+        min-height: 100vh;
+    }
+
+
+
+
+}
+
